fix skill icons on mobile

--- a/style.css
+++ b/style.css
@@ -334,7 +334,7 @@ margin: 0;
   width: 13vw;
   height: 4vw;
   padding-top: 6.5vw;
-  padding-bottom: 8vw;
+  padding-bottom: 9vw;
   background: var(--primary-color);
   color: var(--link-color);
   border-radius: 5px; /* älä koske */
@@ -356,8 +356,7 @@ margin: 0;
 .skillbox-bar {
   width: 7vw;
   align-self: center;
-  margin: 1rem;
-  margin-top: 1rem;
+  margin-top: -0.3rem;
 }
 
 /* Form and Footer */
@@ -748,9 +747,9 @@ ul.responsive li {
 }
 
 .skillbox-bar {
-  margin: -0.4rem;
+  margin: 0;
   padding: 0;
-  width: 12vw;
+  width: 14vw;
 }
 
 .skillbox {
@@ -758,7 +757,7 @@ ul.responsive li {
   height: 30vw;
   padding: 0;
   padding-top: 0;
-  padding-bottom: 0;
+  padding-bottom: 5vw;
   margin: 1vw;
   display: flex;
   justify-content: center;
@@ -768,7 +767,7 @@ ul.responsive li {
 
 .skillbox-img {
   max-width: 12vw;
-  padding-top: 1.5rem;
+  padding-top: 1.6rem;
   align-self: center;
   padding-bottom: 0;
 }
